--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -19,7 +19,7 @@ appender.out.type = Console
 appender.out.name = out
 appender.out.layout.type = PatternLayout
 appender.out.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
-rootLogger.level = INFO
+rootLogger.level = WARNING
 rootLogger.appenderRef.out.ref = out
 
 logger.camel-main.name = org.apache.camel.main
